force-app/main/default/objects/Affaire__c/Affaire__c.object-meta.xml
<CustomObject>
    <label>Affaire</label>
    <nameField>
        <label>Nom de l&#39;affaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>