force-app/main/default/objects/Affaire__c/fields/Etablissement__c.field-meta.xml
<CustomField>
    <fullName>Etablissement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Établissement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affaires</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>