force-app/main/default/objects/Affaire__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Étape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
                <default>true</default>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Elaboration de la réponse</fullName>
            </value>
            <value>
                <fullName>Soumission de l’offre</fullName>
            </value>
            <value>
                <fullName>Gain</fullName>
            </value>
            <value>
                <fullName>Perte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>