force-app/main/default/objects/Affaire__c/recordTypes/AO.recordType-meta.xml
<RecordType>
    <fullName>AO</fullName>
    <active>true</active>
    <label>Appel d&#39;offre</label>
</RecordType>