force-app/main/default/objects/Affaire__c/listViews/Mes_AO_2.listView-meta.xml
<ListView>
    <fullName>Mes_AO_2</fullName>
    <columns>NAME</columns>
    <columns>Etablissement__c</columns>
    <columns>Montant__c</columns>
    <columns>Mois__c</columns>
    <columns>Etape__c</columns>
    <columns>Iconeetape__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Affaire__c.AO</value>
    </filters>
    <label>Mes AO</label>
</ListView>